src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Education__c</fullName>
        <label>Education</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Food__c</fullName>
        <label>Food</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Miscellaneous__c</fullName>
        <label>Miscellaneous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Budget Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <recordTypes>
        <fullName>BudgetReadOnly</fullName>
        <active>true</active>
        <label>BudgetReadOnly</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EducationVR</fullName>
        <active>false</active>
        <errorConditionFormula>Education__c  == 0</errorConditionFormula>
        <errorDisplayField>Education__c</errorDisplayField>
        <errorMessage>Value cannot be equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FoodVR</fullName>
        <active>false</active>
        <errorConditionFormula>Food__c ==0</errorConditionFormula>
        <errorDisplayField>Food__c</errorDisplayField>
        <errorMessage>Value cannot be equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MiscVR</fullName>
        <active>false</active>
        <errorConditionFormula>Miscellaneous__c ==0</errorConditionFormula>
        <errorDisplayField>Miscellaneous__c</errorDisplayField>
        <errorMessage>Value cannot be equal to zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>valueNotZeroVR</fullName>
        <active>true</active>
        <errorConditionFormula>Food__c == 0 ||  Infrastructure__c == 0 || Education__c  == 0 || Miscellaneous__c ==0</errorConditionFormula>
        <errorMessage>Value of Food, Infrastructure, Education and Miscellaneous cannot be zero</errorMessage>
    </validationRules>
</CustomObject>